--- a/reg.css
+++ b/reg.css
@@ -1,17 +1,34 @@
-body{
-    background-image: url(img/christmas_2012-new_2344.jpg);
-    background-size: 750px auto;
-    font-family:'Times New Roman', Times, serif;
-}   
+body
+{
+        background-image: url("img/purple-question-mark.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        position:relative;
+        font-family:'Times New Roman', Times, serif;
+}
+
+body::after {
+        content: "";
+        display: block;
+        position:relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-40%, -40%);
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
 
 .regform{
-    width:500px ;
+    width:400px ;
     margin:100px auto;
     padding:10px;
     background-color: rgba(0,0,0,0.3);
-    color:rgb(225, 225, 225);
-    font-size:25px;
-    border-radius:10px;
+    color:rgb(250, 245, 245);
+    font: size 10px;
+    border: 10px;
+    border-radius: 10px;
 
     
 }
@@ -19,7 +36,7 @@ body{
 .regform h3{
     text-align:center;
     color:#eeeff5;
-}
+    }
 
 .regform .textlabel{
     display:contents;
@@ -46,11 +63,11 @@ input:focus{
 
 button{
     background-color: #f6f6f6;
-    font-size:30px;
+    font-size:20px;
     color:rgb(1, 1, 1);
     margin-top:20px;
     padding:15px 25px;
-    border-radius:8px;
+    border-radius:7px;
     border: 1px solid #050606;
     box-shadow:2px;
 }
